# libsdi12

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  TESTING.md  library.json  library.properties  libsdi12.h  sdi12.h  sdi12.pc.in  sdi12_crc.c  sdi12_easy.h  sdi12_master.c  sdi12_master.h  sdi12_sensor.c  sdi12_sensor.h
.github/: FUNDING.yml
debian/: changelog  control  copyright  libsdi12-0.install  libsdi12-0.lintian-overrides  libsdi12-0.symbols  libsdi12-dev.install  libsdi12-dev.lintian-overrides  rules  watch
debian/patches/: debian-packaging-fixes  series
docs/superpowers/plans/: 2026-03-15-debian-packaging.md
docs/superpowers/specs/: 2026-03-15-debian-packaging-design.md
examples/: easy_master.c  easy_sensor.c  example_crc.c  example_master.c  example_sensor.c  interrupt_master.c  interrupt_sensor.c
examples/BareMaster/: BareMaster.ino
examples/BareSensor/: BareSensor.ino
examples/EasyMaster/: EasyMaster.ino
examples/EasySensor/: EasySensor.ino
examples/InterruptMaster/: InterruptMaster.ino
examples/InterruptSensor/: InterruptSensor.ino
test/: CMakeLists.txt  Makefile  sdi12_test.h  test_address.c  test_crc.c  test_main.c  test_master.c  test_metamorphic.c  test_sensor.c
